--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
   <div class="container-menu">
   <nav class="main-header__menu">
     <ul>
-      <li><a>Produtos</a></li>
+      <li><a routerLink="produtos">Produtos</a></li>
       <li><a><i class="fa-solid fa-cart-shopping"></i> <span class="badge-carrinho">0</span></a></li>
       <li><a>Contato</a></li>
       <li><a>GitHub <i class="fa-brands fa-github"></i></a></li>
