Implementando pesquisa dinâmica em qualquer página

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -98,7 +98,7 @@
         Esse campo precisa ser preenchido.
       </small>
     </div>
-    <button>Enviar</button>
+    <button [disabled]="formContato.invalid" (click)= "enviarFormulario()">Enviar</button>
   </form>
   <address>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3557.575241576837!2d-49.07249608529364!3d-26.916972399864218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94df18c3b4a71d65%3A0xa5ec9dd8406a6a7!2sProWay!5e0!3m2!1spt-BR!2sbr!4v1654896316692!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
