--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,9 +12,6 @@
       <li><a href="https://www.linkedin.com/in/cleo-silva/" target="_blank">Linkedin <i class="fa-brands fa-linkedin"></i></a></li>
     </ul>
   </nav>
-  <form class="search-form">
-    <input type="text">
-    <button><i class="fa-solid fa-magnifying-glass"></i></button>
-  </form>
+  <app-barra-pesquisa></app-barra-pesquisa>
   </div>
 </header>
