Refatorando header para responsivo e footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,78 @@
-<footer class="footer">
-  <div class="footer__container">
-    <section>
-      <h2 class="footer__title">Sobre</h2>
-      <p class="footer__about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nemo molestias soluta dolorum sequi. Quos iusto, debitis, animi perspiciatis reiciendis dignissimos neque ipsam id veniam inventore aut, sit possimus.</p>
-    </section>
-    <address>
-      <h2 class="footer__title">Contato</h2>
-      <ul>
-        <li><i class="fa-solid fa-envelope"></i> email@email.com</li>
-        <li><i class="fa-solid fa-phone"></i> (99) 9999-9999</li>
-        <li><i class="fa-brands fa-whatsapp"></i>   (99) 9 9999-9999</li>
-      </ul>
-    </address>
+<div class="footer-top-area p-3">
+  <div class="zigzag-bottom"></div>
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3 col-sm-6">
+              <div class="footer-about-us">
+                  <h2>u<span>Store</span></h2>
+                  <p>Loja virtual de produtos eletrônicos desenvolvida em Angular 14. O projeto foi realizado para aplicação dos conhecimentos em Angular. A logo foi criada por mim em Corel Draw dando uma identidade à aplicação. Trabalhei a responsividade e identidade mudando componentes do projeto apresentado originalmente.</p>
+                  <div class="footer-social">
+                      <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                      <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                      <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
+                      <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6">
+              <div class="footer-menu">
+                  <h2 class="footer-wid-title">Área do Usuário </h2>
+                  <ul>
+                      <li><a href="#">Minha Conta</a></li>
+                      <li><a href="#">Histórico de Compras</a></li>
+                      <li><a href="#">Lista de Desejos</a></li>
+                      <li><a href="#">Contato do vendedor</a></li>
+                      <li><a href="#">Página Principal</a></li>
+                  </ul>
+              </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6">
+              <div class="footer-menu">
+                  <h2 class="footer-wid-title">Categorias</h2>
+                  <ul>
+                      <li><a href="#">Celulares</a></li>
+                      <li><a href="#">Home acessórios</a></li>
+                      <li><a href="#">LED TV</a></li>
+                      <li><a href="#">Computadores</a></li>
+                      <li><a href="#">Acessórios</a></li>
+                  </ul>
+              </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6">
+              <div class="footer-newsletter">
+                  <h2 class="footer-wid-title">Newsletter</h2>
+                  <p>Assine nossa newsletter e tenha acesso exclusivo a ofertas! Respeitamos nossos assinantes não enviamos spans.</p>
+                  <div class="newsletter-form">
+                      <form action="#">
+                          <input type="email" placeholder="Digite seu e-mail">
+                          <input type="submit" value="Assinar">
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
-  <section class="footer__copyright">
-    &copy; Todos os direitos reservados
-  </section>
-</footer>
+</div> <!-- End footer top area -->
+
+<div class="footer-bottom-area text-bg-dark">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-8">
+              <div class="copyright">
+                  <p>&copy; 2022 cleo silva. Todos os direitos reservados.</p>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+              <div class="footer-card-icon mr-2">
+                  <i class="fa fa-cc-mastercard"></i>
+                  <i class="fa fa-cc-paypal"></i>
+                  <i class="fa fa-cc-visa"></i>
+              </div>
+          </div>
+      </div>
+  </div>
+</div> <!-- End footer bottom area -->
