--- a/src/app/barra-pesquisa/barra-pesquisa.component.html
+++ b/src/app/barra-pesquisa/barra-pesquisa.component.html
@@ -1,4 +1,4 @@
-<form class="search-form" (ngSubmit)="pesquisar()">
-  <input type="text" name="descricao" [(ngModel)]= "descricao">
-  <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+<form class="d-flex" role="search" (ngSubmit)="pesquisar()" >
+  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" name="descricao" [(ngModel)]= "descricao">
+  <button class="btn colorButton" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
 </form>
