--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,42 +1,89 @@
-.footer {
-  background-color: var(--light-gray);
-  color: var(--gray);
-  font-size: 18px;
+.footer-top-area {
+  background-color: #494646;
+  color: #ccc;
 }
 
-.footer__container {
-  display: flex;
-  justify-content: space-evenly;
-  flex-flow: row wrap;
-  padding: 20px;
+.footer-bottom-area {background: #000;color: #fff}
+.footer-about-us span {
+  color: #5a88ca;
+}
+.footer-wid-title {
+  font-family: raleway;
+  font-size: 30px;
+  font-weight: 100;color: #fff
 }
 
-.footer__copyright {
+.footer-about-us h2 {
+  font-weight: 200;
+}
+.footer-menu ul {
+    list-style: outside none none;
+    margin: 0;
+    padding: 0;
+}
+.footer-menu ul li {
+    border-bottom: 1px dashed #555;
+    padding: 5px 0;
+}
+.footer-menu a {
+    display: block;
+    padding: 5px 0;color: #999
+}
+
+
+.footer-social a {
+  background: none repeat scroll 0 0 #5a88ca;
+  color: #fff;
+  display: inline-block;
+  font-size: 20px;
+  height: 40px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  padding-top: 5px;
   text-align: center;
-  margin-top: 20px;
-  background-color: var(--light-gray-2);
-  font-weight: bold;
-  padding: 20px;
-  color: var(--gray);
+  width: 40px;border: 1px solid #5a88ca;
 }
 
-.footer__title {
-  font-size: 22px;
-  font-weight: bold;
-  color: var(--blue);
-  margin-bottom: 5px;
-}
+.footer-social a:hover {background-color: #222;border-color: #666}
 
-.footer__about-text {
-  width: 400px;
-  text-align: justify;
-}
+.footer-social {margin-top: 20px}
 
 
-.footer i {
-  color: var(--orange);
+.newsletter-form input[type="email"] {
+    background: none repeat scroll 0 0 #fff;
+    border: medium none;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 100%;
+}
+.newsletter-form input[type="submit"] {
+    background: none repeat scroll 0 0 #5a88ca;
+    border: medium none;
+    color: #fff;
+    display: inline-block;
+    font-size: 18px;
+    padding: 7px 20px;
+    text-transform: uppercase;border: 1px solid #5a88ca;
+}
+.newsletter-form input[type="submit"]:hover {background: #222;border-color: #666}
+.newsletter-form {
+    margin-top: 25px;
+}
+a {color: #5a88ca}
+a:hover, a:focus {color: #17a78b}
+.footer-bottom-area {
+  background: none repeat scroll 0 0 #000;
+  color: #fff;
+  padding-bottom: 40px;
 }
 
-.footer li {
-  margin: 10px 0;
+.footer-card-icon {
+  font-size: 30px;
+  text-align: right;
 }
+
+.copyright > p {
+  margin: 10px 0 0;
+}
+
+
