--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,8 @@
+.logo {
+  width: 100px;
+  margin-left: 30px;
+}
+
 a{
   text-decoration: none;
 }
@@ -11,7 +16,7 @@ a{
 }
 
 .main-header__title{
-  font-size: 92px;
+  font-size: 30px;
   letter-spacing: -1.5px;
 }
 
@@ -60,7 +65,7 @@ a{
   color: white;
 }
 
-.badge-carrinho:hover {
+/* .badge-carrinho:hover {
   background-color: var(--orange);
-}
+} */
 
