--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ table {
 
 :root {
     --orange: #ff7000;
-    --blue: #004a76;
+    --blue: #5a88ca;
 	--green: #00A200;
     --dark-blue: #002d47;
     --gray: rgba(88, 89, 91, 1);
